tailwind css integrated

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -5,6 +5,7 @@ body {
     background-color: variables.$bg;
     color: var(--text);
     font-size: 26px;
+    font-family: 'Roboto', sans-serif;
 }
 
 main {
