--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,131 @@
 @use "global";
 
-@tailwind preflight;
-@tailwind components;
-@tailwind utilities;
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
+.container {
+    .slick-list {
+        padding: 100px 0;
+        margin: -100px 0;
+    }
+
+    .slick-slider {
+        width: 20rem;
+        margin: 0;
+    }
+
+    .img {
+        cursor: pointer;
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        transition: all 1s ease-in-out;
+    }
+
+    .img:hover {
+        transform: scale(1.5);
+        z-index: 9999;
+        object-fit: cover;
+    }
+
+    .variable-width .slick-slide p {
+        background: blue;
+        height: 100px;
+        color: #fff;
+        margin: 5px;
+        line-height: 100px;
+        text-align: center;
+    }
+
+    .center .slick-center .img {
+        color: #e67e22;
+        opacity: 1;
+        transform: scale(1.08);
+    }
+
+    .center .img {
+        opacity: 0.8;
+        transition: all 300ms ease;
+    }
+
+    .content {
+        padding: 20px;
+        margin: auto;
+        width: 90%;
+    }
+
+    .slick-slide .image {
+        padding: 10px;
+    }
+
+    .slick-slide img {
+        border: 5px solid #fff;
+        display: block;
+        margin: auto;
+    }
+
+    .slick-slide img.slick-loading {
+        border: 0;
+    }
+
+    .slick-slider {
+        margin: 30px auto 50px;
+    }
+
+    .slick-dots {
+        margin-left: 0;
+    }
+
+    .slick-thumb {
+        bottom: -45px;
+    }
+
+    .slick-thumb li {
+        width: 60px;
+        height: 45px;
+    }
+
+    .slick-thumb li img {
+        filter: grayscale(100%);
+    }
+
+    .slick-thumb li.slick-active img {
+        filter: grayscale(0%);
+    }
+
+    @media (max-width: 768px) {
+        .img {
+            font-size: 24px;
+        }
+
+        .center {
+            margin-left: -40px;
+            margin-right: -40px;
+        }
+
+        .center .slick-center .img {
+            color: #e67e22;
+            opacity: 1;
+            transform: scale(1);
+        }
+
+        .center .img {
+            opacity: 0.8;
+            transform: scale(0.95);
+            transition: all 300ms ease;
+        }
+    }
+
+    .slick-vertical .slick-slide {
+        height: 180px;
+    }
+
+    .slick-arrow {
+        background-color: grey;
+        /* color: black; */
+    }
+
+    .slick-arrow:hover {
+        background-color: grey;
+    }
+}
